--- a/developers/steel/commitments.mdx
+++ b/developers/steel/commitments.mdx
@@ -1,4 +1,8 @@
-# Steel Commitments
+---
+title: Steel Commitments
+description: A guide to how Steel Commitments work.
+icon: anchor-lock
+---
 
 Steel retrieves state for a view call at a specific block, therefore it commits the relevant block data to the journal for validation onchain; this data is known as a Steel commitment.
 
@@ -6,7 +10,7 @@ Concretely, a Steel commitment consists of a block identifier, and the block has
 
 ## Steel's Trust Anchor: The Blockhash
 
-Steel uses [revm] to generate an EVM execution environment, `EvmEnv` within the guest. When you create the `EvmEnv`, you can specify a block (the default is the latest block).
+Steel uses [revm](https://docs.rs/revm/latest/revm/) to generate an EVM execution environment, `EvmEnv` within the guest. When you create the `EvmEnv`, you can specify a block (the default is the latest block).
 
 {/* <StripRustCodeComments> */}
 ```rust
@@ -50,7 +54,7 @@ let evm_input = env.into_input().await?;
 
 During this `into_input` step, the preflight data is packed into a form that can be read and validated in the guest.
 
-Crucially, during the step, Steel will use the RPC call [eth_getProof] for all accounts accessed during the preflight and the return data is combined into a sparse Merkle trie.
+Crucially, during the step, Steel will use the RPC call [eth_getProof](https://docs.alchemy.com/reference/eth-getproof) for all accounts accessed during the preflight and the return data is combined into a sparse Merkle trie.
 
 Within the guest, calling `into_env` checks that all Merkle tries are consistent, have the correct root and **computes the corresponding block hash.**
 
@@ -119,7 +123,7 @@ In the `increment` function in the `Counter` contract, we saw this require state
 require(Steel.validateCommitment(journal.commitment), "Invalid commitment");
 ```
 
-The [Steel library] contains the function `validateCommitment` :
+The [Steel library](https://github.com/boundless-xyz/steel/blob/main/contracts/src/Steel.sol) contains the function `validateCommitment` :
 
 ```solidity
 function validateCommitment(Commitment memory commitment) internal view returns (bool) {
@@ -136,7 +140,7 @@ function validateCommitment(Commitment memory commitment) internal view returns 
 
 ## Validation of Steel Commitments
 
-Steel supports two methods of commitment validation (see `validateCommitment` in [Steel.sol]); This validation onchain is essential to ensure that the proof accurately reflects the correct blockchain state.
+Steel supports two methods of commitment validation (see `validateCommitment` in [Steel.sol](https://github.com/boundless-xyz/steel/blob/main/contracts/src/Steel.sol)); This validation onchain is essential to ensure that the proof accurately reflects the correct blockchain state.
 
 1. Block hash commitment
 
@@ -170,14 +174,6 @@ function validateBeaconCommitment(uint256 timestamp, bytes32 blockRoot) internal
 }
 ```
 
-The second method allows validation using the [EIP-4788] beacon roots contract. This technique extends the time window in which the proof can be validated onchain to just over a day. It requires access to a beacon API endpoint and can be enabled by calling `EvmEnv::builder().beacon_api()`. However, this approach is specific to Ethereum (L1) Steel proofs and depends on the implementation of EIP-4788.
+The second method allows validation using the [EIP-4788](https://eips.ethereum.org/EIPS/eip-4788) beacon roots contract. This technique extends the time window in which the proof can be validated onchain to just over a day. It requires access to a beacon API endpoint and can be enabled by calling `EvmEnv::builder().beacon_api()`. However, this approach is specific to Ethereum (L1) Steel proofs and depends on the implementation of EIP-4788.
 
 Note that EIP-4788 only provides access to the parent beacon root, requiring iterative queries in Solidity to retrieve the target beacon root for validation. This iterative process can result in slightly higher gas costs compared to using the `blockhash` opcode. Overall, it is suitable for environments where longer proof generation times are required.
-
-[revm]: https://docs.rs/revm/latest/revm/
-[eth_getProof]: https://docs.alchemy.com/reference/eth-getproof
-[Steel library]: https://github.com/boundless-xyz/steel/blob/main/contracts/src/Steel.sol
-[Steel.sol]: https://github.com/boundless-xyz/steel/blob/main/contracts/src/Steel.sol
-[EIP-4788]: https://eips.ethereum.org/EIPS/eip-4788
-[How Does Steel Work?]: ./how-does-steel-work.md
-[Steel README]: ../README.md
