--- a/developers/steel/quick-start.mdx
+++ b/developers/steel/quick-start.mdx
@@ -1,4 +1,8 @@
-# Getting Started with Steel
+---
+title: Quick Start
+description: Access smart contract state directly within your guest programs.
+icon: industry-windows
+---
 
 The recommended place is to start is [Steel examples](https://github.com/boundless-xyz/steel/tree/main/examples), specifically the [ERC20 Counter](https://github.com/boundless-xyz/steel/tree/main/examples/erc20-counter) example.
 
