--- a/developers/tooling/sdk.mdx
+++ b/developers/tooling/sdk.mdx
@@ -1,4 +1,10 @@
-# Boundless Rust SDK
+---
+title: Boundless SDK
+description: An overview of the Boundless SDK for requestors.
+icon: code
+---
+
+## Overview
 
 The Boundless Market SDK offers high-level Rust APIs for interacting with the Boundless Market smart contracts, preparing and submitting ZK proofs, and handling relevant offchain data such as images and inputs.
 
