--- a/developers/tutorials/auction.mdx
+++ b/developers/tutorials/auction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Set up the Auction
-description: Configuring auction parameters for a proof request
+description: Configuring auction parameters for a proof request.
 icon: gavel
 ---
 
