--- a/developers/tutorials/bonsai.mdx
+++ b/developers/tutorials/bonsai.mdx
@@ -1,6 +1,6 @@
 ---
 title: Migrating from Bonsai
-description: A practical guide for developers transitioning from Bonsai to Boundless
+description: A practical guide for developers transitioning from Bonsai to Boundless.
 icon: tree-deciduous
 ---
 
