--- a/developers/tutorials/build.mdx
+++ b/developers/tutorials/build.mdx
@@ -1,6 +1,6 @@
 ---
 title: Build a Program
-description: Learn how to build a guest program
+description: Learn how to build a guest program.
 icon: wrench
 ---
 
