--- a/developers/tutorials/request.mdx
+++ b/developers/tutorials/request.mdx
@@ -1,6 +1,6 @@
 ---
 title: Request a Proof
-description: Request a proof from the Boundless market
+description: Request a proof from the Boundless market.
 icon: hand-point-up
 ---
 
