--- a/developers/quick-start.mdx
+++ b/developers/quick-start.mdx
@@ -20,7 +20,7 @@ For technical support, please post your questions on the [Boundless Discussions 
 
 ## Install RISC Zero
 
-```bash [Terminal]
+```bash Terminal
 curl -L https://risczero.com/install | bash
 rzup install
 ```
@@ -33,13 +33,13 @@ See more about installation on the [RISC Zero docs](https://dev.risczero.com/api
 
 You can either clone the repo using `git`, but we recommend using `forge init` (you'll need to install [Foundry](https://getfoundry.sh/introduction/installation/)):
 
-```bash [Terminal]
+```bash Terminal
 forge init --template https://github.com/boundless-xyz/boundless-foundry-template boundless-foundry-template && cd boundless-foundry-template
 ```
 
 ### Using Git
 
-```bash [Terminal]
+```bash Terminal
 git clone https://github.com/boundless-xyz/boundless-foundry-template
 cd boundless-foundry-template
 git submodule update --init --recursive
@@ -71,13 +71,13 @@ The [example app](https://github.com/boundless-xyz/boundless-foundry-template/bl
 
 To run the example using the pre-uploaded zkVM guest:
 
-```bash [Terminal]
+```bash Terminal
 RUST_LOG=info cargo run --bin app -- --number 4 --program-url https://plum-accurate-weasel-904.mypinata.cloud/ipfs/QmU7eqsYWguHCYGQzcg42faQQkgRfWScig7BcsdM1sJciw
 ```
 
 The output will look something like:
 
-```bash [Terminal]
+```bash Terminal
 2025-07-01T10:37:08.148174Z  INFO app: Number to publish: 4
 2025-07-01T10:37:10.167132Z  INFO risc0_zkvm::host::server::exec::executor: execution time: 5.667791ms
 2025-07-01T10:37:26.144716Z  INFO app: Waiting for request 2008ac70b2920c9a345ea7fff1ded1fd4302bdf06516a20c to be fulfilled
@@ -85,7 +85,7 @@ The output will look something like:
 
 and the app will query the status of the proof request until it is fulfilled. Once it fulfilled, you'll see output confirming the receipt of the proof, and confirmation of the transaction sent onchain calling the `set` function with the proof as calldata:
 
-```bash [Terminal]
+```bash Terminal
 2025-07-01T10:39:30.164558Z  INFO app: Request 2008ac70b2920c9a345ea7fff1ded1fd4302bdf06516a20c fulfilled
 2025-07-01T10:39:30.164634Z  INFO app: Calling EvenNumber set function
 2025-07-01T10:39:30.682193Z  INFO app: Broadcasting tx 0x067794fbb80a4d67eee593904dc9e6109875efd455b8eedc67609b9d547d5c0d
