--- a/developers/steel/what-is-steel.mdx
+++ b/developers/steel/what-is-steel.mdx
@@ -1,6 +1,10 @@
-# What is Steel?
+---
+title: What is Steel?
+description: The ZK Coprocessor for EVM apps.
+icon: question
+---
 
-## Steel: The ZK Coprocessor for EVM Apps
+## Steel: The ZK Coprocessor for EVM apps
 
 > "Unbounded EVM computation made simple"
 
@@ -8,9 +12,9 @@ Steel lets Solidity developers effortlessly scale their applications by moving c
 
 Steel pulls state from any EVM chain, performs verifiable computation across multiple blocks offchain, and generates concise execution proofs. Developers simply verify these proofs onchain to access boundless compute, without worrying about gas limits.
 
-:::note[Example]
+<Note>
 A single Steel proof has verified a computation equivalent to 30 Ethereum blocks—saving 1.2 billion gas—generated for under $10 and verified onchain for under 300k gas.
-:::
+</Note>
 
 ## Onchain vs offchain execution
 
@@ -66,9 +70,6 @@ contract OffChainERC20Counter() {
 }
 ```
 
-To make sure that Steel's execution proofs can be trusted, we check the output of the zkVM program to make sure that the token contract address is correct, and we validate the [Steel Commitment]. Only if these are valid, the proof is verified. Upon successful verification, we can be sure that the account balance is larger than 1 and we increment the counter variable. Notice there is no check onchain of the balance or any EVM execution other than the validations and proof verification. The EVM execution happens within the zkVM guest program.
+To make sure that Steel's execution proofs can be trusted, we check the output of the zkVM program to make sure that the token contract address is correct, and we validate the [Steel Commitment](/developers/steel/commitments). Only if these are valid, the proof is verified. Upon successful verification, we can be sure that the account balance is larger than 1 and we increment the counter variable. Notice there is no check onchain of the balance or any EVM execution other than the validations and proof verification. The EVM execution happens within the zkVM guest program.
 
-In [How does Steel work?], we dive deeper into how exactly the zkVM guest program verifies state access and runs EVM execution, generating a smart contract execution proof, and verifying the proof onchain.
-
-[Steel Commitment]: /developers/steel/commitments
-[How does Steel work?]: /developers/steel/how-it-works
+In [How does Steel work?](/developers/steel/how-it-works), we dive deeper into how exactly the zkVM guest program verifies state access and runs EVM execution, generating a smart contract execution proof, and verifying the proof onchain.
