--- a/developers/tutorials/tracking.mdx
+++ b/developers/tutorials/tracking.mdx
@@ -1,6 +1,6 @@
 ---
 title: Tracking Proof Requests
-description: Check the status of your proof request in the Boundless market
+description: Check the status of your proof request in the Boundless market.
 icon: magnifying-glass
 ---
 
