--- a/developers/tutorials/troubleshooting.mdx
+++ b/developers/tutorials/troubleshooting.mdx
@@ -1,6 +1,6 @@
 ---
 title: Troubleshooting a Request
-description: Debugging a request on Boundless
+description: Debugging a request on Boundless.
 icon: bug-slash
 ---
 
@@ -15,7 +15,7 @@ If you submitted a request, and it is stuck in an "Unknown" / "Submitted" state,
   - The `boundless` CLI does this by default, and the execution step in the Foundry template also accomplishes this.
   - If your request is submitted onchain, you can use the following command to execute it locally. If it succeeds, this is not the issue.
 
-```bash [Terminal]
+```bash Terminal
 RUST_LOG=info boundless proving execute --request-id $REQUEST_ID
 ```
 
