--- a/developers/what.mdx
+++ b/developers/what.mdx
@@ -1,7 +1,7 @@
 ---
 title: What is Boundless?
 description: Boundless is a universal protocol that brings ZK to every chain.
-icon: block-question
+icon: question
 ---
 
 **Boundless is a universal protocol that brings ZK to every chain.**
