--- a/provers/broker.mdx
+++ b/provers/broker.mdx
@@ -26,7 +26,7 @@ You will need the Boundless CLI installed to deposit/check your balance.
 Please see [Installing the Boundless CLI](/developers/tooling/cli#installation) for instructions.
 :::
 
-```bash [Terminal]
+```bash Terminal
 export RPC_URL=<TARGET_CHAIN_RPC_URL>
 export PRIVATE_KEY=<BROKER_PRIVATE_KEY>
 
@@ -36,7 +36,7 @@ boundless account deposit-collateral <ZKC_TO_DEPOSIT>
 
 #### Check Current Collateral Balance
 
-```bash [Terminal]
+```bash Terminal
 export RPC_URL=<TARGET_CHAIN_RPC_URL>
 export PRIVATE_KEY=<BROKER_PRIVATE_KEY>
 
@@ -121,7 +121,7 @@ Below are all `broker.toml` settings organized by section:
 
 ## Broker Operation
 
-```txt [Terminal]
+```txt Terminal
 2024-10-23T14:37:37.364844Z  INFO bento_cli: image_id: a0dfc25e54ebde808e4fd8c34b6549bbb91b4928edeea90ceb7d1d8e7e9096c7 | input_id: eccc8f06-488a-426c-ae3d-e5acada9ae22
 2024-10-23T14:37:37.368613Z  INFO bento_cli: STARK job_id: 0d89e2ca-a1e3-478f-b89d-8ab23b89f51e
 2024-10-23T14:37:37.369346Z  INFO bento_cli: STARK Job running....
@@ -134,19 +134,19 @@ Below are all `broker.toml` settings organized by section:
 
 Start a bento cluster:
 
-```bash [Terminal]
+```bash Terminal
 just bento
 ```
 
 Set the `RPC_URL` environment variable to the network the order is on:
 
-```bash [Terminal]
+```bash Terminal
 export RPC_URL=<TARGET_CHAIN_RPC_URL>
 ```
 
 Then, run the benchmark:
 
-```bash [Terminal]
+```bash Terminal
 boundless proving benchmark --request-ids <IDS>
 ```
 
@@ -164,7 +164,7 @@ Running a broker with `just` will also start the Bento cluster through docker co
 `just` installation instructions can be found [here](https://github.com/casey/just#installation).
 :::
 
-```bash [Terminal]
+```bash Terminal
 just broker
 ```
 
@@ -178,7 +178,7 @@ To check Bento is running correctly, you can send a sample proof workload:
 
 > Before running this, [install Bento CLI](/provers/quick-start#running-a-test-proof)
 
-```bash [Terminal]
+```bash Terminal
 # In the bento directory
 RUST_LOG=info bento_cli -c 32
 ```
@@ -187,7 +187,7 @@ RUST_LOG=info bento_cli -c 32
 
 To run broker with an already initialized Bento cluster or with a different prover, you can build and run a broker directly with the following:
 
-```bash [Terminal]
+```bash Terminal
 cargo build --bin broker --release
 # Run with flags or environment variables based on network/configuration
 ./target/release/broker
@@ -195,7 +195,7 @@ cargo build --bin broker --release
 
 ### Stopping The Broker Service
 
-```bash [Terminal]
+```bash Terminal
 just broker down
 ```
 
@@ -215,7 +215,7 @@ When upgrading your Boundless broker to a new version, follow these steps to ens
 
 ##### Stop the broker and optionally clean the database
 
-```bash [Terminal]
+```bash Terminal
 just broker clean
 
 # Or stop the broker without clearing volumes
@@ -232,14 +232,14 @@ While it is generally not necessary to clear volumes unless specifically noted i
 
 See [releases](https://github.com/boundless-xyz/boundless/releases) for latest tag to use.
 
-```bash [Terminal]
+```bash Terminal
 git checkout <new_version_tag>
 # Example: git checkout v0.9.0
 ```
 
 ##### Start the broker with the new version
 
-```bash [Terminal]
+```bash Terminal
 just broker
 ```
 
@@ -272,7 +272,7 @@ export RPC_URL_2=<URL for network 2>
 
 Then, create the new broker config file that the second broker will use:
 
-```bash [Terminal]
+```bash Terminal
 # Copy from an existing broker config file
 cp broker.toml broker2.toml
 
@@ -290,7 +290,7 @@ Then, modify configuration values for each network, keeping the following in min
 
 Then, just start the cluster as you normally would with:
 
-```bash [Terminal]
+```bash Terminal
 just broker
 ```
 
