--- a/provers/performance-optimization.mdx
+++ b/provers/performance-optimization.mdx
@@ -19,14 +19,14 @@ Both of these tools warrant a decent size terminal window on your desktop to mon
 
 Operating competing workloads can lead to unpredictable results. We recommend isolating your test system from other workloads to ensure that the performance tuning results are consistent and reliable. This includes stopping configured [Broker](/provers/broker#stopping-the-broker-service) services:
 
-```bash [Terminal]
+```bash Terminal
 docker ps
 docker stop <BROKER_CONTAINER_ID>
 ```
 
 Alternatively you can start Bento without running the broker service:
 
-```bash [Terminal]
+```bash Terminal
 just bento
 ```
 
@@ -38,13 +38,13 @@ It is recommended to benchmark using an example of your actual workload. Using a
 
 To try a realistic example:
 
-```bash [Terminal]
+```bash Terminal
 RUST_LOG=info bento_cli -f /path/to/program -i /path/to/input`
 ```
 
 If you intend to operate across a variety of different workloads (such as those that may be fed by the [Broker](/provers/broker)), you can also use the following command to generate a synthetic workload:
 
-```bash [Terminal]
+```bash Terminal
 RUST_LOG=info bento_cli -c <ITERATION_COUNT>
 ```
 
@@ -58,11 +58,11 @@ The typical test process will be:
 
 #### Example test run of 1024 iterations:
 
-```bash [Terminal]
+```bash Terminal
 RUST_LOG=info bento_cli -c 1024
 ```
 
-```txt [Terminal]
+```txt Terminal
 2024-10-17T15:27:34.469227Z  INFO bento_cli: image_id: a0dfc25e54ebde808e4fd8c34b6549bbb91b4928edeea90ceb7d1d8e7e9096c7 | input_id: 3740ebbd-3bef-475f-b23d-6c2bf96c6551
 2024-10-17T15:27:34.479904Z  INFO bento_cli: STARK job_id: 895a996b-b0fa-4fc8-ae7a-ba92eeb6b0b1
 2024-10-17T15:27:34.480919Z  INFO bento_cli: STARK Job running....
@@ -71,11 +71,11 @@ RUST_LOG=info bento_cli -c 1024
 2024-10-17T15:27:58.513718Z  INFO bento_cli: Job done!
 ```
 
-```bash [Terminal]
+```bash Terminal
 bash scripts/job_status.sh 895a996b-b0fa-4fc8-ae7a-ba92eeb6b0b1
 ```
 
-```txt [Terminal]
+```txt Terminal
  jobs_count
 ------------
          19
@@ -145,11 +145,11 @@ Once you have selected a `MAXIMUM` segment size you should verify that the GPU d
 
 In the following test, an RTX 4060 with 16GB VRAM attempts to run with a `SEGMENT_SIZE` of 21, which is too large for the GPU to handle. In this test, it is necessary to monitor the `gpu-agent` Docker logs to determine the cause of the failure.
 
-```bash [Terminal]
+```bash Terminal
 RUST_LOG=info bento_cli -c 4096
 ```
 
-```txt [Terminal]
+```txt Terminal
 2024-10-17T15:58:15.205138Z  INFO bento_cli: image_id: a0dfc25e54ebde808e4fd8c34b6549bbb91b4928edeea90ceb7d1d8e7e9096c7 | input_id: fe7f4251-25f4-436f-b782-f134d4c80538
 2024-10-17T15:58:15.210646Z  INFO bento_cli: STARK job_id: bbf442eb-40db-44fb-8df4-f13a8ce10bf2
 2024-10-17T15:58:15.211686Z  INFO bento_cli: STARK Job running....
@@ -158,11 +158,11 @@ RUST_LOG=info bento_cli -c 4096
 
 We then examine the `gpu-agent` logs and see a series of out of memory errors:
 
-```bash [Terminal]
+```bash Terminal
 docker logs bento-gpu_prove_agent0-1
 ```
 
-```log [Terminal]
+```log Terminal
 2024-10-17T15:57:43.667484Z  INFO workflow::tasks::prove: Starting proof of idx: 6f95e238-d0be-4e94-9e81-fefdc0b7d8c4 - 1
 thread 'main' panicked at /usr/local/cargo/registry/src/index.crates.io-6f17d22bba15001f/risc0-zkp-1.1.1/src/hal/cuda.rs:206:61:
 called `Result::unwrap()` on an `Err` value: OutOfMemory
@@ -212,7 +212,7 @@ gpu_agent0: &gpu
 
 #### Execute the Test Harness
 
-```bash [Terminal]
+```bash Terminal
 RUST_LOG=info bento_cli -c 4096
 ```
 
@@ -224,7 +224,7 @@ RUST_LOG=info bento_cli -c 4096
 
 #### Review the Effective Hz
 
-```bash [Terminal]
+```bash Terminal
 bash scripts/job_status.sh <JOB_ID>
 ```
 
@@ -281,7 +281,7 @@ We can incorporate multiple GPUs into a configuration. In this example, we have 
 
 Here are the effective results on our example system:
 
-```txt [Terminal]
+```txt Terminal
 431375.207834042771 | 35127296     |   81.430957
 ```
 
