--- a/provers/quick-start.mdx
+++ b/provers/quick-start.mdx
@@ -20,7 +20,7 @@ We recommend using Ubuntu 24.04 for your proving node.
 
 To get started, first clone the Boundless monorepo on your proving machine, and switch to the [latest release](https://github.com/boundless-xyz/boundless/releases):
 
-```bash [Terminal]
+```bash Terminal
 git clone https://github.com/boundless-xyz/boundless
 cd boundless
 git checkout release-1.1
@@ -47,7 +47,7 @@ sudo ./scripts/setup.sh
 
 You'll need to set two environment variables:
 
-```bash [Terminal]
+```bash Terminal
 export PRIVATE_KEY=""
 export RPC_URL=""
 ```
@@ -70,24 +70,24 @@ Boundless is comprised of two major components:
 
 To get started with a test proof on a new proving machine, you'll need to install the `bento_cli`:
 
-```bash [Terminal]
+```bash Terminal
 cargo install --locked --git https://github.com/boundless-xyz/boundless bento-client --branch release-1.1 --bin bento_cli
 ```
 Once installed, you can run bento with:
 
-```bash [Terminal]
+```bash Terminal
 just bento
 ```
 
 This will spin up bento without the broker. You can check the logs at any time with:
 
-```bash [Terminal]
+```bash Terminal
 just bento logs
 ```
 
 To run the test proof:
 
-```bash [Terminal]
+```bash Terminal
 RUST_LOG=info bento_cli -c 32
 ```
 
@@ -143,7 +143,7 @@ Therefore, to use *$ZKC* as proving collateral, provers have to first [bridge *$
 
 With the [environment variables](/provers/quick-start#setup-environment-variables) set, you can now deposit *$ZKC* tokens as collateral to your account balance:
 
-```bash [Terminal]
+```bash Terminal
 boundless account deposit-collateral 50
 ```
 
@@ -151,26 +151,26 @@ boundless account deposit-collateral 50
 
 You can now start the prover (which runs both bento + broker i.e. the full proving stack!):
 
-```bash [Terminal]
+```bash Terminal
 just prover
 ```
 
 To check the proving logs, you can use:
 
-```bash [Terminal]
+```bash Terminal
 just prover logs
 ```
 ### Stop Broker
 
 To stop broker, you can run:
 
-```bash [Terminal]
+```bash Terminal
 just prover down
 ```
 
 Or remove all volumes and data from the service:
 
-```bash [Terminal]
+```bash Terminal
 just prover clean
 ```
 
@@ -180,7 +180,7 @@ just prover clean
 
 Instead of passing environment variables for each shell session as we did above, you can set them in `.env.broker`. There is an [.env.broker-template](https://github.com/boundless-xyz/boundless/blob/main/.env.broker-template) available for you to get started:
 
-```bash [Terminal]
+```bash Terminal
 cp .env.broker-template .env.broker
 ```
 
@@ -188,7 +188,7 @@ After which, you can use a text editor to adjust the environment variables as re
 
 To run prover with a custom environment file:
 
-```bash [Terminal]
+```bash Terminal
 just prover up ./.env.broker
 just prover down ./.env.broker
 ```
@@ -232,7 +232,7 @@ deploy:
 
 To add a second GPU, first check your GPUs are recognised with:
 
-```bash [Terminal]
+```bash Terminal
 nvidia-smi -L
 ```
 which should output something like:
