--- a/developers/why.mdx
+++ b/developers/why.mdx
@@ -6,9 +6,7 @@ icon: face-thinking
 
 Traditionally, blockchains rely on a "global re-execution" model, where every node redundantly processes every transaction to achieve consensus on the network's state. While this model is secure and transparent, it creates a fundamental constraint: the network is limited by the slowest node. This means the collective computational capacity of all nodes is underutilized. The result is that blockchains can only handle simple computations, with anything complex becoming too expensive or hitting gas limits.
 
-<a href="/execution-model.png">
-  <img src="/execution-model.png" alt="Execution Model" />
-</a>
+![Execution Model](/images/execution-model.png)
 
 ## The Solution: Decoupling Execution From Consensus
 
