--- a/provers/broker.mdx
+++ b/provers/broker.mdx
@@ -1,4 +1,8 @@
-# Broker Configuration & Operation
+---
+title: Broker Configuration & Operation
+description: Optimizing the Broker for optimal performance on the market.
+icon: sliders
+---
 
 ## Overview
 
@@ -6,9 +10,9 @@ The Broker is a service that runs within the [Bento](/provers/proving-stack#what
 
 ## Broker Configuration
 
-:::tip[Tip]
+<Tip>
 Broker will live-reload the `broker.toml` when it changes. In most cases, you will not need to restart the Broker for the configuration to take effect.
-:::
+</Tip>
 
 Broker configuration is primarily managed through the `broker.toml` file in the Boundless directory. This file is mounted into the Broker container and it is used to configure the Broker daemon.
 
@@ -21,10 +25,11 @@ It is recommend that a broker keep a balance on the market >= `max_collateral` (
 
 #### Deposit Collateral to the Market
 
-:::note[Note]
+
+<Note>
 You will need the Boundless CLI installed to deposit/check your balance.
 Please see [Installing the Boundless CLI](/developers/tooling/cli#installation) for instructions.
-:::
+</Note>
 
 ```bash Terminal
 export RPC_URL=<TARGET_CHAIN_RPC_URL>
@@ -47,9 +52,9 @@ You can omit the `PRIVATE_KEY` environment variable here and specify your `walle
 
 ### Settings in Broker.toml
 
-:::warning[Warning]
+<Warning>
 Quotation marks matter in TOML so please pay particular attention to the quotation marks for config values.
-:::
+</Warning>
 
 Below are all `broker.toml` settings organized by section:
 
@@ -160,9 +165,9 @@ To run programs manually, and for performance optimizations, see [performance op
 
 Running a broker with `just` will also start the Bento cluster through docker compose.
 
-:::note[Note]
+<Info>
 `just` installation instructions can be found [here](https://github.com/casey/just#installation).
-:::
+</Info>
 
 ```bash Terminal
 just broker
@@ -170,9 +175,9 @@ just broker
 
 ### Make sure Bento is running
 
-:::warning[Warning]
+<Warning>
 A Broker needs a [Bento](/provers/proving-stack#what-is-bento) instance to operate. Please follow the [quick start](/provers/quick-start) guide to get Bento up and running.
-:::
+</Warning>
 
 To check Bento is running correctly, you can send a sample proof workload:
 
@@ -199,51 +204,47 @@ cargo build --bin broker --release
 just broker down
 ```
 
-:::warning[Warning]
+<Warning>
 If running the broker on a network, there may be locked proofs that have not been fulfilled yet. Follow the [Safe Upgrade Steps](#safe-upgrade-steps) to ensure shutdown and/or restart without loss of stake.
-:::
+</Warning>
 
 ## Safe Upgrade Steps
 
-:::warning[Breaking Changes]
+<Warning>
 There can be subtle breaking changes between releases that may affect your broker's state. Following these upgrade steps helps minimize issues from state breaking changes.
-:::
+</Warning>
 
 When upgrading your Boundless broker to a new version, follow these steps to ensure a safe migration:
 
-::::steps
+<Steps>
+  <Step title="Stop the broker and optionally clean the database">
+    ```bash Terminal
+    just broker clean
 
-##### Stop the broker and optionally clean the database
+    # Or stop the broker without clearing volumes
+    just broker down
+    ```
 
-```bash Terminal
-just broker clean
+    This will wait for any committed orders to finalize before shutting down. Avoid sending kill signals to the broker process and ensure either through the broker logs or through indexer that your broker does not have any incomplete locked orders before proceeding.
 
-# Or stop the broker without clearing volumes
-just broker down
-```
+    <Note>
+    While it is generally not necessary to clear volumes unless specifically noted in release, it is recommended to avoid any potential state breaking changes.
+    </Note>
+  </Step>
+  <Step title="Update to the new version">
+    See [releases](https://github.com/boundless-xyz/boundless/releases) for latest tag to use.
 
-This will wait for any committed orders to finalize before shutting down. Avoid sending kill signals to the broker process and ensure either through the broker logs or through indexer that your broker does not have any incomplete locked orders before proceeding.
-
-:::note[Database Cleanup]
-While it is generally not necessary to clear volumes unless specifically noted in release, it is recommended to avoid any potential state breaking changes.
-:::
-
-##### Update to the new version
-
-See [releases](https://github.com/boundless-xyz/boundless/releases) for latest tag to use.
-
-```bash Terminal
-git checkout <new_version_tag>
-# Example: git checkout v0.9.0
-```
-
-##### Start the broker with the new version
-
-```bash Terminal
-just broker
-```
-
-::::
+    ```bash Terminal
+    git checkout <new_version_tag>
+    # Example: git checkout v0.9.0
+    ```
+  </Step>
+  <Step title="Start the broker with the new version">
+    ```bash Terminal
+    just broker
+    ```
+  </Step>
+</Steps>
 
 ## Running Multiple Brokers
 
