--- a/provers/proving-stack.mdx
+++ b/provers/proving-stack.mdx
@@ -1,4 +1,8 @@
-# The Boundless Proving Stack
+---
+title: Boundless Proving Stack
+description: A high-level explainer on the individual parts that make up the Boundless proving stack.
+icon: cubes-stacked
+---
 
 ## Overview
 
@@ -6,9 +10,9 @@ At the core of the Boundless proving stack is *Bento*, which fundamentally build
 
 ## What is Bento?
 
-:::tip
+<Tip>
 For a deeper dive into Bento's technical design, components and configuration, please see [Bento Technical Design](/provers/bento).
-:::
+</Tip>
 
 Bento is a semi multi-tenant proving cluster for the [RISC Zero zkVM](https://dev.risczero.com/api/zkvm/). Concretely, Bento is a Docker compose stack which contains all the services needed to run a Bento cluster. It is highly configurable, and features:
 
@@ -19,27 +23,22 @@ Bento is a semi multi-tenant proving cluster for the [RISC Zero zkVM](https://de
 - a robust retry system.
 - an API for proof management.
 
-
-<a href="/bento.png">
-  <img src="/bento.png" alt="Boundless Protocol" />
-</a>
+![Bento Diagram](/images/bento.png)
 
 The [Prover Quick Start](/provers/quick-start) has information about getting started with Bento, a recommended initial configuration and how to run basic sample proof workloads.
 
 ## What is the Broker?
 
-:::warning
+<Warning>
 For all provers, a collateral balance is necessary to be able to cover requirements for proof request lock-in. The Broker service provides a straightforward way to [deposit funds](/provers/broker#deposit-collateral-to-the-market) to the market.
-:::
+</Warning>
 
 The [Broker](/provers/broker) is responsible for market interactions (see steps **2b.** and **4a.** in *Figure 1*) including evaluating requests to assign a price, bidding on requests to lock them, issuing proving requests to the Bento proving cluster, and submitting proof fulfillments onchain.
 Broker configuration is primarily managed through the [`broker.toml`](/provers/broker#settings-in-brokertoml) file in the Boundless directory.
 
-<a href="/proof-lifecycle.png" >
-  <img src="/proof-lifecycle.png" alt="Proof Lifecycle" />
-</a>
-
-*Figure 1: [Proof Lifecycle](/developers/proof-lifecycle) of a Boundless Proof.*
+<Frame caption="Figure 1: Proof Lifecycle of a Boundless Proof.">
+  <img src="/images/proof-lifecycle.png" alt="Proof Lifecycle Diagram" />
+</Frame>
 
 To get started with the Broker, please see the [Broker page](/provers/broker).
 
@@ -57,12 +56,10 @@ Bento is **not** responsible for interaction with the Boundless market.
 
 The recommended service for market interaction for provers is the [Broker](/provers/broker) service. The Broker is responsible for both interacting with the Boundless Market i.e., bidding on and fulfilling proof requests *and* sending job requests to the Bento proving cluster.
 
-<a href="/bento_broker.png" >
-  <img src="/bento_broker.png" alt="Boundless Protocol" />
-</a>
+![A diagram showing how Bento & Broker are related](/images/bento_broker.png)
 
-:::note
+<Note>
 As Bento is intended to be a drop in replacement for Bonsai, the Broker can run by sending requests either to Bento *or* to Bonsai.
-:::
+</Note>
 
 [^1]: Please refer to the Bonsai API docs: https://api.bonsai.xyz/swagger-ui/
